# CIMC

./: LICENSE  README.md  devices.txt
base/sys/: ascii.xcf
boot/: bios.c  boot.s  linker.ld
emulator/: Bitfield.h  CMakeLists.txt  CPU.cpp  CPU.h  CPUConstants.h  Config.cpp  Config.h  ControlUnit.cpp  ControlUnit.h  Cx16.cpp  Cx16.h  Data.h  Display.cpp  Display.h  Executor.cpp  Executor.h  Gfx.cpp  Gfx.h  HDD.cpp  HDD.h  ImmediateData.h  MemoryData.h  PIT.cpp  PIT.h  PMI.cpp  PMI.h  Register.h  main.cpp
schem/cimc/: cimc-cache.lib  cimc.lib  cimc.sch  cimc.sch-bak  sym-lib-table
spec/: Assembler-16bit.txt  Assembler.txt  Control-Unit.mod  Filesystem.txt  Layout.xcf  Schematic.xcf  exec.txt  mass-storage.txt
spec/CPU/: .~lock.cpu-cx16-sdm.odt#  Assembler-16bit.txt  Assembler.txt  Control-Unit.mod  Control-Unit.xcf  asm-example.txt  cpu-cx16-sdm.odt  cx16-sdm.txt  virtual-address.xcf
spec/Cx16/: .~lock.cx16-sdm_cpu.odt#  OLD-cx16-sdm_cpu.txt  OLD-cx16-sdm_io.txt  cx16-sdm_cpu.odt
spec/Devices/: devices.txt  mass storage.skp  mass-storage.txt  storage-construct-diagram.txt
toolchain/: .gitignore  CMakeLists.txt
toolchain/compiler/: CMakeLists.txt  assembler.cpp  assembler.h  ast.cpp  ast.h  compiler.cpp  compiler.h  cpp_compiler.cpp  cpp_compiler.h  lexer.cpp  lexer.h  main.cpp  parser.h
toolchain/compiler/asm/: ast.cpp  ast.h  builder.cpp  builder.h  directive.cpp  directive.h  instruction.cpp  instruction.h  lexer.cpp  lexer.h  opcodes.h  parser.cpp  parser.h  runtimedata.cpp  runtimedata.h
toolchain/compiler/cpp/: lexer.cpp  lexer.h  parser.cpp  parser.h
worlds/: .gitignore
(+210 files in other folders)
